Rename text-shadow APIs to shadow instead.
In the near future, the text-shadow APIs will be used to
implement other types of shadows (e.g. box-shadows).

This patch just renames all functions and structures, which
will make it easier to review the follow up patches that
modify box shadows to work via the current text-shadow API.

--- a/wrench/reftests/text/1658.yaml
+++ b/wrench/reftests/text/1658.yaml
@@ -2,7 +2,7 @@
 root:
   items:
         -
-          type: "text-shadow"
+          type: "shadow"
           blur-radius: 5
           bounds: [14, 18, 205, 35]
           offset: [0, 0]
@@ -15,5 +15,5 @@ root:
           color: [0, 0, 0, 1.0]
           font: "VeraBd.ttf"
         -
-          type: "pop-text-shadow"
+          type: "pop-shadow"
 
