--- a/wrench/reftests/text/shadow-complex.yaml
+++ b/wrench/reftests/text/shadow-complex.yaml
@@ -2,13 +2,13 @@
 root:
   items:
         -
-          type: "text-shadow"
+          type: "shadow"
           bounds: [14, 18, 205, 35]
           blur-radius: 5
           offset: [0, 0]
           color: black
         -
-          type: "text-shadow"
+          type: "shadow"
           bounds: [14, 18, 205, 35]
           blur-radius: 0
           offset: [2, 3]
@@ -21,9 +21,9 @@ root:
           color: [0, 0, 0, 0] # actual text is transparent
           font: "VeraBd.ttf"
         -
-          type: "pop-text-shadow"
+          type: "pop-shadow"
         -
-          type: "text-shadow"
+          type: "shadow"
           bounds: [14, 18, 205, 35]
           blur-radius: 3
           offset: [-2, 3.5]
@@ -36,7 +36,7 @@ root:
           color: [0, 0, 0, 0] # actual text is transparent
           font: "VeraBd.ttf"
         -
-          type: "pop-text-shadow"
+          type: "pop-shadow"
         -
           bounds: [14, 18, 205, 35]
           glyphs: [72, 3, 69, 72, 86, 87]
@@ -45,4 +45,4 @@ root:
           color: [0, 0, 0, 0] # actual text is transparent
           font: "VeraBd.ttf"
         -
-          type: "pop-text-shadow"
+          type: "pop-shadow"
