--- a/wrench/reftests/text/shadow-cover-1.yaml
+++ b/wrench/reftests/text/shadow-cover-1.yaml
@@ -2,7 +2,7 @@
 root:
   items:
         -
-          type: "text-shadow"
+          type: "shadow"
           bounds: [14, 18, 205, 35]
           blur-radius: 3
           offset: [0, 0]
@@ -15,4 +15,4 @@ root:
           color: green
           font: "VeraBd.ttf"
         -
-          type: "pop-text-shadow"
+          type: "pop-shadow"
