--- a/wrench/reftests/text/subtle-shadow-ref.yaml
+++ b/wrench/reftests/text/subtle-shadow-ref.yaml
@@ -5,7 +5,7 @@ root:
           bounds: [0, 0, 255, 85]
           color: [245, 100, 100, 1.0]
         -
-          type: "text-shadow"
+          type: "shadow"
           bounds: [14, 18, 205, 35]
           blur-radius: 0
           offset: [0, 1]
@@ -18,7 +18,7 @@ root:
           color: [168, 168, 168, 0.0]
           font: "VeraBd.ttf"
         -
-          type: "pop-text-shadow"
+          type: "pop-shadow"
         - bounds: [14, 18, 205, 35]
           glyphs: [55, 75, 76, 86, 3, 76, 86, 3, 87, 75, 72, 3, 69, 72, 86, 87]
           offsets: [16, 43, 35.533333, 43, 51.533333, 43, 60.4, 43, 72.833336, 43, 80.833336, 43, 89.7, 43, 102.13333, 43, 110.13333, 43, 119, 43, 135, 43, 149.2, 43, 157.2, 43, 173.2, 43, 187.4, 43, 196.26666, 43]
