--- a/wrench/reftests/text/shadow-grey.yaml
+++ b/wrench/reftests/text/shadow-grey.yaml
@@ -4,7 +4,7 @@ root:
         - rect: [14, 10, 205, 38]
           color: [100, 100, 100, 1.0]
         -
-          type: "text-shadow"
+          type: "shadow"
           blur-radius: 2
           color: [100, 100, 100, 1.0]
           bounds: [14, 10, 205, 38]
@@ -15,5 +15,5 @@ root:
           size: 24
           color: [0,0,0,0]
         -
-          type: "pop-text-shadow"
+          type: "pop-shadow"
 
