--- a/wrench/reftests/text/shadow-many.yaml
+++ b/wrench/reftests/text/shadow-many.yaml
@@ -2,19 +2,19 @@
 root:
   items:
         -
-          type: "text-shadow"
+          type: "shadow"
           bounds: [14, 18, 205, 35]
           blur-radius: 5
           offset: [0, 0]
           color: black
         -
-          type: "text-shadow"
+          type: "shadow"
           bounds: [14, 18, 205, 35]
           blur-radius: 0
           offset: [2, 3]
           color: red
         -
-          type: "text-shadow"
+          type: "shadow"
           bounds: [14, 18, 205, 35]
           blur-radius: 3
           offset: [-2, 3.5]
@@ -27,8 +27,8 @@ root:
           color: [0, 0, 0, 0] # actual text is transparent
           font: "VeraBd.ttf"
         -
-          type: "pop-text-shadow"
+          type: "pop-shadow"
         -
-          type: "pop-text-shadow"
+          type: "pop-shadow"
         -
-          type: "pop-text-shadow"
+          type: "pop-shadow"
