--- a/wrench/reftests/text/shadow-single.yaml
+++ b/wrench/reftests/text/shadow-single.yaml
@@ -2,7 +2,7 @@
 root:
   items:
         -
-          type: "text-shadow"
+          type: "shadow"
           blur-radius: 5
           bounds: [14, 18, 205, 35]
           offset: [0, 0]
@@ -15,4 +15,4 @@ root:
           color: [0, 0, 0, 0] # actual text is transparent
           font: "VeraBd.ttf"
         -
-          type: "pop-text-shadow"
+          type: "pop-shadow"
