--- a/wrench/Cargo.toml
+++ b/wrench/Cargo.toml
@@ -19,6 +19,7 @@ clap = { version = "2", features = ["yaml"] }
 lazy_static = "0.2"
 yaml-rust = { git = "https://github.com/vvuk/yaml-rust", features = ["preserve_order"] }
 serde_json = "1.0"
+ron = "0.1.3"
 time = "0.1"
 crossbeam = "0.2"
 osmesa-sys = { version = "0.1.2", optional = true }
