Update wrench to use PopAllShadows

--- a/wrench/reftests/text/1658.yaml
+++ b/wrench/reftests/text/1658.yaml
@@ -15,5 +15,5 @@ root:
           color: [0, 0, 0, 1.0]
           font: "VeraBd.ttf"
         -
-          type: "pop-shadow"
+          type: "pop-all-shadows"
 
