--- a/wrench/reftests/text/shadow-cover-1.yaml
+++ b/wrench/reftests/text/shadow-cover-1.yaml
@@ -15,4 +15,4 @@ root:
           color: green
           font: "VeraBd.ttf"
         -
-          type: "pop-shadow"
+          type: "pop-all-shadows"
