--- a/wrench/reftests/text/1658-ref.yaml
+++ b/wrench/reftests/text/1658-ref.yaml
@@ -15,7 +15,7 @@ root:
           color: [0, 0, 0, 0.0]
           font: "VeraBd.ttf"
         -
-          type: "pop-shadow"
+          type: "pop-all-shadows"
         -
           type: text
           bounds: [14, 18, 205, 35]
