--- a/wrench/reftests/text/shadow-complex.yaml
+++ b/wrench/reftests/text/shadow-complex.yaml
@@ -21,7 +21,7 @@ root:
           color: [0, 0, 0, 0] # actual text is transparent
           font: "VeraBd.ttf"
         -
-          type: "pop-shadow"
+          type: "pop-all-shadows"
         -
           type: "shadow"
           bounds: [14, 18, 205, 35]
@@ -36,8 +36,6 @@ root:
           color: [0, 0, 0, 0] # actual text is transparent
           font: "VeraBd.ttf"
         -
-          type: "pop-shadow"
-        -
           bounds: [14, 18, 205, 35]
           glyphs: [72, 3, 69, 72, 86, 87]
           offsets: [135, 43, 149.2, 43, 157.2, 43, 173.2, 43, 187.4, 43, 196.26666, 43]
@@ -45,4 +43,4 @@ root:
           color: [0, 0, 0, 0] # actual text is transparent
           font: "VeraBd.ttf"
         -
-          type: "pop-shadow"
+          type: "pop-all-shadows"
