--- a/wrench/reftests/text/shadow-cover-2.yaml
+++ b/wrench/reftests/text/shadow-cover-2.yaml
@@ -22,5 +22,5 @@ root:
           color: [0, 0, 0, 0] # text transparent
           font: "VeraBd.ttf"
         -
-          type: "pop-shadow"
+          type: "pop-all-shadows"
 
