--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -66,6 +66,8 @@ tasks:
           servo-tidy &&
           (cd wrench && python headless.py reftest) &&
           (cd wrench && cargo build --release --features=debugger)
+    routes:
+      - "index.garbage.webrender.ci.{{event.head.user.login}}.{{event.head.repo.branch}}.linux-release"
   - metadata:
       name: Linux debug tests
       description: Runs debug-mode WebRender CI stuff on a Linux TC worker
@@ -97,6 +99,8 @@ tasks:
           (cd webrender_api && cargo test --verbose --features "ipc") &&
           (cd webrender && cargo build --verbose --no-default-features) &&
           (cargo test --all --verbose)
+    routes:
+      - "index.garbage.webrender.ci.{{event.head.user.login}}.{{event.head.repo.branch}}.linux-debug"
   # For the OS X jobs we use a pool of machines that we are managing, because
   # Mozilla releng doesn't have any spare OS X machines for us at this time.
   # Talk to :kats or :jrmuizel if you need more details about this. The machines
@@ -136,6 +140,8 @@ tasks:
           (cd webrender_api && cargo test --verbose --features "ipc") &&
           (cd webrender && cargo build --verbose --no-default-features) &&
           (cargo test --all --verbose)
+    routes:
+      - "index.garbage.webrender.ci.{{event.head.user.login}}.{{event.head.repo.branch}}.osx-release"
   - metadata:
       name: OS X debug tests
       description: Runs debug-mode WebRender CI stuff on a OS X TC worker
@@ -165,3 +171,5 @@ tasks:
           export PKG_CONFIG_PATH="/usr/local/opt/zlib/lib/pkgconfig:$PKG_CONFIG_PATH" &&
           (cd wrench && python headless.py reftest) &&
           (cd wrench && cargo build --release --features=debugger)
+    routes:
+      - "index.garbage.webrender.ci.{{event.head.user.login}}.{{event.head.repo.branch}}.osx-debug"
