Make decoration suite more realistic/interesting.
Mostly adjusts sizes to be similar to what gecko produces, most notably
very thin lines. Also purposefully triggers some more corner cases in
the shaders and tries more shadow combinations.

--- a/wrench/reftests/text/decorations-suite.yaml
+++ b/wrench/reftests/text/decorations-suite.yaml
@@ -5,7 +5,7 @@ root:
       baseline: 10
       start: 10
       end: 210
-      width: 3
+      width: 1
       orientation: horizontal
       color: black
       style: solid
@@ -13,7 +13,7 @@ root:
       baseline: 20
       start: 10
       end: 210
-      width: 3
+      width: 1
       orientation: horizontal
       color: blue
       style: dashed
@@ -21,7 +21,7 @@ root:
       baseline: 30
       start: 10
       end: 210
-      width: 3
+      width: 1
       orientation: horizontal
       color: green
       style: dotted
@@ -39,7 +39,7 @@ root:
       baseline: 50
       start: 10
       end: 210
-      width: 8
+      width: 2
       orientation: horizontal
       color: black
       style: solid
@@ -47,15 +47,15 @@ root:
       baseline: 65
       start: 10
       end: 210
-      width: 8
+      width: 2
       orientation: horizontal
       color: blue
       style: dashed
     - type: line
       baseline: 80
       start: 10
-      end: 210
-      width: 8
+      end: 207  # pruposefully cut off
+      width: 2
       orientation: horizontal
       color: green
       style: dotted
@@ -71,50 +71,92 @@ root:
 
     -
       type: "shadow"
-      bounds: [14, 18, 205, 35]
+      bounds: [8, 100, 225, 50]
       blur-radius: 0
-      offset: [5, 7]
+      offset: [2, 2]
       color: red
+    - type: line
+      baseline: 110
+      start: 10
+      end: 210
+      width: 1
+      orientation: horizontal
+      color: [0,0,0,0]
+      style: solid
+    - type: line
+      baseline: 120
+      start: 10
+      end: 210
+      width: 1
+      orientation: horizontal
+      color: [0,0,0,0]
+      style: dashed
     - type: line
       baseline: 130
       start: 10
-      end: 210
-      width: 8
+      end: 209
+      width: 1
       orientation: horizontal
-      color: black
-      style: solid
+      color: [0,0,0,0]
+      style: dotted
+    - type: line
+      baseline: 140
+      start: 10
+      end: 210
+      width: 3
+      thickness: 1
+      orientation: horizontal
+      color: [0,0,0,0]
+      style: wavy
+    -
+      type: pop-all-shadows
+
+    -
+      type: "shadow"
+      bounds: [8, 145, 225, 65]
+      blur-radius: 1
+      offset: [2, 3]
+      color: red
     - type: line
       baseline: 150
       start: 10
       end: 210
-      width: 8
+      width: 2
+      orientation: horizontal
+      color: black
+      style: solid
+    - type: line
+      baseline: 165
+      start: 10
+      end: 210
+      width: 2
       orientation: horizontal
       color: blue
       style: dashed
     - type: line
-      baseline: 170
+      baseline: 180
       start: 10
-      end: 210
-      width: 8
+      end: 207    # purposefully cut off
+      width: 2
       orientation: horizontal
       color: green
       style: dotted
     - type: line
-      baseline: 190
+      baseline: 195
       start: 10
       end: 210
-      width: 12
-      thickness: 3
+      width: 6
+      thickness: 2
       orientation: horizontal
-      color: black
+      color: red
       style: wavy
     -
-      type: "pop-all-shadows"
+      type: pop-all-shadows
 
     -
       type: "shadow"
-      bounds: [0, 200, 220, 120]
-      blur-radius: 3
+      bounds: [8, 220, 225, 40]
+      blur-radius: 0
       offset: [5, 7]
       color: red
     - type: line
@@ -136,13 +178,55 @@ root:
     - type: line
       baseline: 270
       start: 10
-      end: 210
+      end: 205    # purposefully cut off
       width: 8
       orientation: horizontal
       color: green
       style: dotted
     - type: line
       baseline: 290
+      start: 10
+      end: 210
+      width: 12
+      thickness: 3
+      orientation: horizontal
+      color: black
+      style: wavy
+    -
+      type: "pop-all-shadows"
+
+    -
+      type: "shadow"
+      bounds: [0, 320, 240, 140]
+      blur-radius: 3
+      offset: [5, 7]
+      color: red
+    - type: line
+      baseline: 330
+      start: 10
+      end: 210
+      width: 8
+      orientation: horizontal
+      color: black
+      style: solid
+    - type: line
+      baseline: 350
+      start: 10
+      end: 210
+      width: 8
+      orientation: horizontal
+      color: blue
+      style: dashed
+    - type: line
+      baseline: 370
+      start: 10
+      end: 205    # purposefully cut off
+      width: 8
+      orientation: horizontal
+      color: green
+      style: dotted
+    - type: line
+      baseline: 390
       start: 10
       end: 210
       width: 16
@@ -157,7 +241,7 @@ root:
       baseline: 220
       start: 10
       end: 210
-      width: 3
+      width: 1
       orientation: vertical
       color: black
       style: solid
@@ -165,7 +249,7 @@ root:
       baseline: 230
       start: 10
       end: 210
-      width: 3
+      width: 1
       orientation: vertical
       color: blue
       style: dashed
@@ -173,7 +257,7 @@ root:
       baseline: 240
       start: 10
       end: 210
-      width: 3
+      width: 1
       orientation: vertical
       color: green
       style: dotted
@@ -191,7 +275,7 @@ root:
       baseline: 270
       start: 10
       end: 210
-      width: 8
+      width: 2
       orientation: vertical
       color: black
       style: solid
@@ -199,15 +283,15 @@ root:
       baseline: 290
       start: 10
       end: 210
-      width: 8
+      width: 2
       orientation: vertical
       color: blue
       style: dashed
     - type: line
       baseline: 310
       start: 10
-      end: 210
-      width: 8
+      end: 207    # purposefully cut off
+      width: 2
       orientation: vertical
       color: green
       style: dotted
@@ -246,7 +330,7 @@ root:
     - type: line
       baseline: 420
       start: 10
-      end: 210
+      end: 205  # purposefully cut off
       width: 8
       orientation: vertical
       color: green
