--- a/wrench/reftests/scrolling/fixed-position.yaml
+++ b/wrench/reftests/scrolling/fixed-position.yaml
@@ -1,23 +1,10 @@
 root:
-  bounds: [0, 0, 1024, 10000]
-  scroll-offset: [0, 100]
   items:
-    # This stacking context should not scroll out of view because it is fixed position.
-    - type: stacking-context
-      bounds: [0, 0, 50, 50]
-      scroll-policy: fixed
+    - type: scroll-frame
+      bounds: [0, 0, 500, 500]
+      scroll-offset: [0, 100]
       items:
-        - type: rect
-          bounds: [0, 0, 50, 50]
-          color: green
-    # Even though there is a fixed position stacking context, it should scroll,
-    # because it is fixed relative to its reference frame. The reference frame
-    # of this stacking context is the stacking context parent because it has
-    # a transformation.
-    - type: stacking-context
-      bounds: [0, 0, 50, 50]
-      transform: translate(60, 100)
-      items:
+        # This stacking context should not scroll out of view because it is fixed position.
         - type: stacking-context
           bounds: [0, 0, 50, 50]
           scroll-policy: fixed
@@ -25,41 +12,56 @@ root:
             - type: rect
               bounds: [0, 0, 50, 50]
               color: green
-    # This is similar to the previous case, but ensures that this still works
-    # even with an identity transform.
-    - type: stacking-context
-      bounds: [120, 0, 50, 200]
-      transform: translate(0, 0)
-      items:
+        # Even though there is a fixed position stacking context, it should scroll,
+        # because it is fixed relative to its reference frame. The reference frame
+        # of this stacking context is the stacking context parent because it has
+        # a transformation.
         - type: stacking-context
-          bounds: [0, 0, 50, 200]
-          scroll-policy: fixed
+          bounds: [0, 0, 50, 50]
+          transform: translate(60, 100)
           items:
-            - type: rect
-              bounds: [0, 100, 50, 50]
-              color: green
-    # This is similar to the previous case, but for perspective.
-    - type: stacking-context
-      bounds: [180, 0, 50, 200]
-      perspective: 1
-      items:
-        - type: stacking-context
-          bounds: [0, 0, 50, 200]
-          scroll-policy: fixed
-          items:
-            - type: rect
-              bounds: [0, 100, 50, 50]
-              color: green
-    # This is similar to the previous case, but since the perspective is
-    # 0 (equivalent to none), it shouldn't scroll.
-    - type: stacking-context
-      bounds: [240, 0, 50, 200]
-      perspective: 0
-      items:
-        - type: stacking-context
-          bounds: [0, 0, 50, 200]
-          scroll-policy: fixed
-          items:
-            - type: rect
+            - type: stacking-context
               bounds: [0, 0, 50, 50]
-              color: green
+              scroll-policy: fixed
+              items:
+                - type: rect
+                  bounds: [0, 0, 50, 50]
+                  color: green
+        # This is similar to the previous case, but ensures that this still works
+        # even with an identity transform.
+        - type: stacking-context
+          bounds: [120, 0, 50, 200]
+          transform: translate(0, 0)
+          items:
+            - type: stacking-context
+              bounds: [0, 0, 50, 200]
+              scroll-policy: fixed
+              items:
+                - type: rect
+                  bounds: [0, 100, 50, 50]
+                  color: green
+        # This is similar to the previous case, but for perspective.
+        - type: stacking-context
+          bounds: [180, 0, 50, 200]
+          perspective: 1
+          items:
+            - type: stacking-context
+              bounds: [0, 0, 50, 200]
+              scroll-policy: fixed
+              items:
+                - type: rect
+                  bounds: [0, 100, 50, 50]
+                  color: green
+        # This is similar to the previous case, but since the perspective is
+        # 0 (equivalent to none), it shouldn't scroll.
+        - type: stacking-context
+          bounds: [240, 0, 50, 200]
+          perspective: 0
+          items:
+            - type: stacking-context
+              bounds: [0, 0, 50, 200]
+              scroll-policy: fixed
+              items:
+                - type: rect
+                  bounds: [0, 0, 50, 50]
+                  color: green
