Improve the sticky API and documentation
This should hopefully fix a lot of issues with the previous version of
the API which made things more complicated than necessary.

--- a/wrench/reftests/scrolling/sticky.yaml
+++ b/wrench/reftests/scrolling/sticky.yaml
@@ -8,8 +8,8 @@ root:
       items:
       - type: sticky-frame
         bounds: [10, 60, 50, 50]
-        sticky-info:
-          bottom: [0, -500]
+        margin-bottom: 0
+        vertical-constraints: [-500, 0]
         items:
         - type: rect
           bounds: [10, 60, 50, 50]
@@ -22,8 +22,8 @@ root:
       items:
       - type: sticky-frame
         bounds: [70, 10, 50, 50]
-        sticky-info:
-          top: [0, 500]
+        margin-top: 0
+        vertical-constraints: [0, 500]
         items:
         - type: rect
           bounds: [70, 10, 50, 50]
@@ -35,8 +35,8 @@ root:
       items:
       - type: sticky-frame
         bounds: [60, 70, 50, 50]
-        sticky-info:
-          right: [0, -500]
+        margin-right: 0
+        horizontal-constraints: [-500, 0]
         items:
         - type: rect
           bounds: [60, 70, 50, 50]
@@ -49,8 +49,8 @@ root:
       items:
       - type: sticky-frame
         bounds: [70, 70, 50, 50]
-        sticky-info:
-          left: [0, 500]
+        margin-left: 0
+        horizontal-constraints: [0, 500]
         items:
         - type: rect
           bounds: [70, 70, 50, 50]
@@ -63,8 +63,8 @@ root:
       items:
       - type: sticky-frame
         bounds: [130, 60, 50, 50]
-        sticky-info:
-          bottom: [10, -500]
+        margin-bottom: 10
+        vertical-constraints: [-500, 0]
         items:
         - type: rect
           bounds: [130, 60, 50, 50]
@@ -77,8 +77,8 @@ root:
       items:
       - type: sticky-frame
         bounds: [190, 10, 50, 50]
-        sticky-info:
-          top: [10, 500]
+        margin-top: 10
+        vertical-constraints: [0, 500]
         items:
         - type: rect
           bounds: [190, 10, 50, 50]
@@ -90,8 +90,8 @@ root:
       items:
       - type: sticky-frame
         bounds: [180, 70, 50, 50]
-        sticky-info:
-          right: [10, -500]
+        margin-right: 10
+        horizontal-constraints: [-500, 0]
         items:
         - type: rect
           bounds: [180, 70, 50, 50]
@@ -104,8 +104,8 @@ root:
       items:
       - type: sticky-frame
         bounds: [190, 70, 50, 50]
-        sticky-info:
-          left: [10, 500]
+        margin-left: 10
+        horizontal-constraints: [0, 500]
         items:
         - type: rect
           bounds: [190, 70, 50, 50]
@@ -118,8 +118,8 @@ root:
       items:
       - type: sticky-frame
         bounds: [250, 60, 50, 50]
-        sticky-info:
-          bottom: [0, -25]
+        margin-bottom: 0
+        vertical-constraints: [-25, 0]
         items:
         - type: rect
           bounds: [250, 60, 50, 50]
@@ -132,8 +132,8 @@ root:
       items:
       - type: sticky-frame
         bounds: [310, 10, 50, 50]
-        sticky-info:
-          top: [0, 25]
+        margin-top: 0
+        vertical-constraints: [0, 25]
         items:
         - type: rect
           bounds: [310, 10, 50, 50]
@@ -145,8 +145,8 @@ root:
       items:
       - type: sticky-frame
         bounds: [300, 70, 50, 50]
-        sticky-info:
-          right: [0, -25]
+        margin-right: 0
+        horizontal-constraints: [-25, 0]
         items:
         - type: rect
           bounds: [300, 70, 50, 50]
@@ -159,8 +159,8 @@ root:
       items:
       - type: sticky-frame
         bounds: [310, 70, 50, 50]
-        sticky-info:
-          left: [0, 25]
+        margin-left: 0
+        horizontal-constraints: [0, 25]
         items:
         - type: rect
           bounds: [310, 70, 50, 50]
