--- a/wrench/Cargo.toml
+++ b/wrench/Cargo.toml
@@ -24,7 +24,7 @@ time = "0.1"
 crossbeam = "0.2"
 osmesa-sys = { version = "0.1.2", optional = true }
 osmesa-src = { git = "https://github.com/servo/osmesa-src", optional = true }
-webrender = {path = "../webrender", features=["debugger","query"]}
+webrender = {path = "../webrender", features=["debugger"]}
 serde = {version = "1.0", features = ["derive"] }
 
 [features]
