--- a/webrender/Cargo.toml
+++ b/webrender/Cargo.toml
@@ -47,5 +47,6 @@ dwrote = "0.4"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-foundation = "0.4"
-core-graphics = "0.9"
+core-graphics = "0.12"
 core-text = { version = "7.0", default-features = false }
+foreign-types = "0.3.0"
