Improve the shader precache code.
* In precache mode, also issue a draw call after compiling the shader.
  On some drivers, much of the work is deferred until the first
  draw call is issued.
* Record the time for each precaching compilation and log it.
* Add support for shader precache option to wrench.

These options help with benchmarking, to ensure there are no
stalls during benchmarks caused by shader compilation.

--- a/wrench/src/args.yaml
+++ b/wrench/src/args.yaml
@@ -4,6 +4,10 @@ author: Vladimir Vukicevic <vladimir@pobox.com>
 about: WebRender testing and debugging utility
 
 args:
+  - precache:
+      short: c
+      long: precache
+      help: Precache shaders
   - verbose:
       short: v
       long: verbose
