--- a/wrench/reftests/text/shadow-rotate.yaml
+++ b/wrench/reftests/text/shadow-rotate.yaml
@@ -1,4 +1,4 @@
---- checks that transformed text shadows can locate glyphs in the glyph cache
+--- #checks that transformed text shadows can locate glyphs in the glyph cache
 root:
   items:
     - type: stacking-context
