Write out font files for CGFonts
This ups the core-graphics dependency and adds the ability to
convert a CGFont into a font file. The code is based on the code in
https://searchfox.org/mozilla-central/rev/7a8c667bdd2a4a32746c9862356e199627c0896d/gfx/2d/ScaledFontMac.cpp#255

We also switch to CFNumber::from to avoid breakage with the latest core-foundation

--- a/wrench/Cargo.toml
+++ b/wrench/Cargo.toml
@@ -27,6 +27,10 @@ osmesa-src = { git = "https://github.com/servo/osmesa-src", optional = true }
 webrender = {path = "../webrender", features=["debugger","profiler"]}
 serde = {version = "1.0", features = ["derive"] }
 
+[target.'cfg(target_os = "macos")'.dependencies]
+core-graphics = "0.12.4"
+core-foundation = "0.4"
+
 [features]
 headless = [ "osmesa-sys", "osmesa-src" ]
 logging = [ "env_logger" ]
