--- a/servo-tidy.toml
+++ b/servo-tidy.toml
@@ -4,7 +4,7 @@ skip-check-licenses = false
 
 [ignore]
 # Ignored packages with duplicated versions
-packages = ["yaml-rust", "adler32"]
+packages = ["yaml-rust"]
 # Files that are ignored for all tidy and lint checks.
 files = [
     # servo-tidy does not properly support workspaces yet.
