--- a/webrender_api/Cargo.toml
+++ b/webrender_api/Cargo.toml
@@ -17,7 +17,7 @@ byteorder = "1.2.1"
 euclid = "0.16"
 ipc-channel = {version = "0.9", optional = true}
 serde = { version = "1.0.23", features = ["rc", "derive"] }
-serde_derive = { version = "1.0.23" }
+serde_derive = { version = "1.0.23", features = ["deserialize_from"] }
 time = "0.1"
 
 [target.'cfg(target_os = "macos")'.dependencies]
