--- a/webrender_api/Cargo.toml
+++ b/webrender_api/Cargo.toml
@@ -16,7 +16,8 @@ bincode = "0.9"
 byteorder = "1.2.1"
 euclid = "0.16"
 ipc-channel = {version = "0.9", optional = true}
-serde = { version = "1.0", features = ["rc", "derive"] }
+serde = { version = "1.0.23", features = ["rc", "derive"] }
+serde_derive = { version = "1.0.23" }
 time = "0.1"
 
 [target.'cfg(target_os = "macos")'.dependencies]
