Use [patch] instead of [replace]
This is the new hotness and is what we need to use in Gecko, so for
consistency let's use it in webrender as well. This requires rust
1.22 so do a version bump to go with. Gecko has already had its minimum
rust version requirement bumped to 1.22.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ members = [
 debug = true
 panic = "abort"
 
-[replace]
-"serde:1.0.23" = { git = "https://github.com/gankro/serde", branch = "deserialize_from_enums3" }
-"serde_derive:1.0.23" = { git = "https://github.com/gankro/serde", branch = "deserialize_from_enums3", feature="deserialize_from" }
+[patch.crates-io]
+serde = { git = "https://github.com/gankro/serde", branch = "deserialize_from_enums3" }
+serde_derive = { git = "https://github.com/gankro/serde", branch = "deserialize_from_enums3", feature="deserialize_from" }
