Capture: proper blob images support (no tiling yet) external texture buffer support renamed WR API feature to "debug-serialization"

--- a/webrender/Cargo.toml
+++ b/webrender/Cargo.toml
@@ -11,7 +11,7 @@ default = ["freetype-lib"]
 freetype-lib = ["freetype/servo-freetype-sys"]
 profiler = ["thread_profiler/thread_profiler"]
 debugger = ["ws", "serde_json", "serde", "image", "base64"]
-capture = ["webrender_api/serial", "ron", "serde"]
+capture = ["webrender_api/debug-serialization", "ron", "serde"]
 
 [dependencies]
 app_units = "0.6"
