--- a/webrender_api/Cargo.toml
+++ b/webrender_api/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/servo/webrender"
 [features]
 nightly = ["euclid/unstable", "serde/unstable"]
 ipc = ["ipc-channel"]
-serial = []
+debug-serialization = []
 
 [dependencies]
 app_units = "0.6"
