Add dual-source blending path for subpixel text when supported.
This makes it possible to share batches when the text color is
different between runs. This can result in significantly better
draw call batching.

Add option to wrench to disable dual source blending path.

Add reftest option to control if dual-source blending is used.

--- a/wrench/src/args.yaml
+++ b/wrench/src/args.yaml
@@ -32,6 +32,9 @@ args:
       short: a
       long: no-subpixel-aa
       help: Disable subpixel aa
+  - slow_subpixel:
+      long: slow-subpixel
+      help: Disable dual source blending
   - headless:
       short: h
       long: headless
