Update serde to 1.0.27, removing some of the patch hacks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,4 @@ debug = true
 panic = "abort"
 
 [patch.crates-io]
-serde = { git = "https://github.com/gankro/serde", branch = "deserialize_from_enums3" }
-serde_derive = { git = "https://github.com/gankro/serde", branch = "deserialize_from_enums3", feature="deserialize_from" }
+serde_derive = { git = "https://github.com/gankro/serde", branch = "deserialize_from_enums4", feature="deserialize_in_place" }
