--- a/webrender_api/Cargo.toml
+++ b/webrender_api/Cargo.toml
@@ -17,7 +17,7 @@ bincode = "0.9"
 byteorder = "1.2.1"
 euclid = "0.16"
 ipc-channel = {version = "0.9", optional = true}
-serde = { version = "=1.0.27", features = ["rc", "derive"] }
+serde = { version = "=1.0.27", features = ["rc"] }
 serde_derive = { version = "=1.0.27", features = ["deserialize_in_place"] }
 time = "0.1"
 
