Capture: PlainFrame serialization under capture2 feature

--- a/webrender/Cargo.toml
+++ b/webrender/Cargo.toml
@@ -12,6 +12,7 @@ freetype-lib = ["freetype/servo-freetype-sys"]
 profiler = ["thread_profiler/thread_profiler"]
 debugger = ["ws", "serde_json", "serde", "image", "base64"]
 capture = ["webrender_api/debug-serialization", "ron", "serde"]
+capture2 = ["capture"]
 
 [dependencies]
 app_units = "0.6"
